--- a/wiki-page.html
+++ b/wiki-page.html
@@ -6,7 +6,7 @@
         
     </HEad>
     <BOdy>
-        <H1>The Brown Bear</H1>
+        <H3>The black Bear</H3>
         <P>The brown bear (Ursus arctos) is native to parts of norhern Eurasian and Norh America. Its
             <br>convservation status is currently "Least Concern" There are many subspecies within the brown
             <br>bear species, including the Atlas bear and the Himalayan brown bear
