--- a/to-do-list.html
+++ b/to-do-list.html
@@ -4,6 +4,9 @@
     <link rel="stylesheet" href="css/to-do-list.css">
 </head>
 <body>
+    <p> new kine 
+        
+    </p>
     <div class="my-list">
         <p> new uodate </p>
         <h1> Today's to do list </h1>
