--- a/to-do-list.html
+++ b/to-do-list.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <head>
-    <title> to-do-list.html </title>
+    <title> hello  </title>
     <link rel="stylesheet" href="css/to-do-list.css">
 </head>
 <body>
     <p> new kine 
-        
+
     </p>
     <div class="my-list">
         <p> new uodate </p>
